@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.11951 2013/02/18 19:02:04 tron Exp $
+$NetBSD: TODO,v 1.11952 2013/02/21 17:58:31 wiz Exp $
 
 Suggested new packages
 ======================
@@ -690,7 +690,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o gtick-0.4.2
 	o gtk-gnutella-0.98.4
 	o gtk-systrace-20030623
-	o gtk2+-2.24.16
 	o gtkmm-3.6.0
 	o gtkmm-documentation-2.16.0 [GNOME 2.26]
 	o gtkwave-3.3.41
