@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.61 2012/08/29 19:12:07 tron Exp $
+# $NetBSD: Makefile,v 1.62 2012/09/11 23:19:40 asau Exp $
 
 DISTNAME=	rpm2pkg-3.2.3
 CATEGORIES=	pkgtools
@@ -22,6 +22,12 @@ MAKE_FILE=	${FILESDIR}/Makefile
 WRKSRC=		${WRKDIR}
 
 INSTALLATION_DIRS=	${PKGMANDIR}/man8 sbin
+
+.include "../../mk/compiler.mk"
+
+.if !empty(CC_VERSION:Mclang*)
+MAKE_FLAGS+=		ACTIVE_CC=clang
+.endif
 
 .include "../../mk/bsd.prefs.mk"
 
