@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.245 2013/02/13 18:39:39 adam Exp $
+# $NetBSD: Makefile,v 1.246 2013/02/16 11:18:16 wiz Exp $
 
-DISTNAME=	gtk+-2.24.15
+DISTNAME=	gtk+-2.24.16
 PKGNAME=	${DISTNAME:S/gtk/gtk2/}
-PKGREVISION=	1
 CATEGORIES=	x11
 MASTER_SITES=	${MASTER_SITE_GNOME:=sources/gtk+/2.24/}
 EXTRACT_SUFX=	.tar.xz
