@@ -1,8 +1,8 @@
-$NetBSD: distinfo,v 1.146 2012/12/15 12:49:29 drochner Exp $
+$NetBSD: distinfo,v 1.147 2013/02/13 18:39:39 adam Exp $
 
-SHA1 (gtk+-2.24.15.tar.xz) = b4b9d13e220adcd52cdc91326f043adccb3db58a
-RMD160 (gtk+-2.24.15.tar.xz) = 6f691e8ec4564523eca4fd9c2a89d3c7e370038f
-Size (gtk+-2.24.15.tar.xz) = 13276488 bytes
+SHA1 (gtk+-2.24.16.tar.xz) = 7f6a899380f6bf47a1bb060a3abf82260ca47eb5
+RMD160 (gtk+-2.24.16.tar.xz) = 504efab42707a07514353d200e5af81d9d387527
+Size (gtk+-2.24.16.tar.xz) = 13435020 bytes
 SHA1 (patch-ab) = 9c82cc60f3825d377a197c876fcc6faa379cbde3
 SHA1 (patch-af) = d59414e24a7da7f8694dbefbd2f0c2c2b60ec5ad
 SHA1 (patch-aj) = 9887573ac7ade9e8f8ee2ead68e279f67836a1a3
