@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2013,v 1.665 2013/02/21 13:23:56 obache Exp $
+$NetBSD: CHANGES-2013,v 1.666 2013/02/21 15:51:43 pettai Exp $
 
 Changes to the packages collection and infrastructure in 2013:
 
@@ -956,3 +956,4 @@ Changes to the packages collection and infrastructure in 2013:
 	Updated www/geeklog to 1.8.2.1 [taca 2013-02-21]
 	Updated math/ruby-spreadsheet to 0.8.1 [obache 2013-02-21]
 	Updated security/opendnssec to 1.3.13 [pettai 2013-02-21]
+	Updated x11/gtk2 to 2.24.16 [adam 2013-02-21]
